# nightscout-display

./: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml
.github/workflows/: merge-request.yaml
src/: main.py
src/app/: controller.py  state.py  view.py
src/clients/: nightscout.py
src/interfaces/: errors.py  events.py  factory.py  interface.py  pygame_interface.py  st7789_interface.py
src/utils/: color.py  config.py  image_utils.py  status.py  threshold.py  trend.py
test/utils/: test_threshold.py
